; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcpred_msa.c_hevc_intra_pred_angular_lower_4width_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcpred_msa.c_hevc_intra_pred_angular_lower_4width_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_15__ = type { i32 }

@__const.hevc_intra_pred_angular_lower_4width_msa.inv_angle = private unnamed_addr constant [7 x i32] [i32 -4096, i32 -1638, i32 -910, i32 -630, i32 -482, i32 -390, i32 -315], align 16
@intra_pred_angle_low = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32, i32)* @hevc_intra_pred_angular_lower_4width_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_intra_pred_angular_lower_4width_msa(i32* %0, i32* %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca [7 x i32], align 16
  %12 = alloca [100 x i32], align 16
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca i32, align 4
  %30 = alloca i64, align 8
  %31 = alloca i64, align 8
  %32 = alloca %struct.TYPE_15__, align 4
  %33 = alloca %struct.TYPE_15__, align 4
  %34 = alloca %struct.TYPE_15__, align 4
  %35 = alloca %struct.TYPE_15__, align 4
  %36 = alloca %struct.TYPE_15__, align 4
  %37 = alloca i32, align 4
  %38 = alloca i32, align 4
  %39 = alloca i32, align 4
  %40 = alloca i32, align 4
  %41 = alloca i32, align 4
  %42 = alloca i32, align 4
  %43 = alloca i32, align 4
  %44 = alloca i32, align 4
  %45 = alloca i32, align 4
  %46 = alloca i32, align 4
  %47 = alloca i32, align 4
  %48 = alloca i32, align 4
  %49 = alloca i32, align 4
  %50 = alloca i32, align 4
  %51 = alloca i32, align 4
  %52 = alloca i32, align 4
  %53 = alloca %struct.TYPE_15__, align 4
  %54 = alloca %struct.TYPE_15__, align 4
  %55 = alloca %struct.TYPE_15__, align 4
  %56 = alloca %struct.TYPE_15__, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %57 = bitcast [7 x i32]* %11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %57, i8* align 16 bitcast ([7 x i32]* @__const.hevc_intra_pred_angular_lower_4width_msa.inv_angle to i8*), i64 28, i1 false)
  %58 = getelementptr inbounds [100 x i32], [100 x i32]* %12, i64 0, i64 0
  %59 = getelementptr inbounds i32, i32* %58, i64 4
  store i32* %59, i32** %13, align 8
  %60 = bitcast %struct.TYPE_15__* %36 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %60, i8 0, i64 4, i1 false)
  %61 = load i32*, i32** @intra_pred_angle_low, align 8
  %62 = load i32, i32* %10, align 4
  %63 = sub nsw i32 %62, 2
  %64 = sext i32 %63 to i64
  %65 = getelementptr inbounds i32, i32* %61, i64 %64
  %66 = load i32, i32* %65, align 4
  store i32 %66, i32* %26, align 4
  %67 = load i32, i32* %26, align 4
  %68 = ashr i32 %67, 3
  store i32 %68, i32* %15, align 4
  %69 = load i32, i32* %26, align 4
  store i32 %69, i32* %27, align 4
  %70 = load i32*, i32** %7, align 8
  %71 = getelementptr inbounds i32, i32* %70, i64 -1
  store i32* %71, i32** %14, align 8
  %72 = load i32, i32* %15, align 4
  %73 = icmp slt i32 %72, -1
  br i1 %73, label %74, label %110

74:                                               ; preds = %5
  %75 = load i32, i32* %10, align 4
  %76 = sub nsw i32 %75, 11
  %77 = sext i32 %76 to i64
  %78 = getelementptr inbounds [7 x i32], [7 x i32]* %11, i64 0, i64 %77
  %79 = load i32, i32* %78, align 4
  store i32 %79, i32* %28, align 4
  %80 = load i32*, i32** %14, align 8
  %81 = call i32 @LD(i32* %80)
  store i32 %81, i32* %29, align 4
  %82 = load i32, i32* %29, align 4
  %83 = load i32*, i32** %13, align 8
  %84 = call i32 @SD(i32 %82, i32* %83)
  %85 = load i32, i32* %15, align 4
  store i32 %85, i32* %17, align 4
  br label %86

86:                                               ; preds = %105, %74
  %87 = load i32, i32* %17, align 4
  %88 = icmp sle i32 %87, -1
  br i1 %88, label %89, label %108

89:                                               ; preds = %86
  %90 = load i32, i32* %17, align 4
  %91 = load i32, i32* %28, align 4
  %92 = mul nsw i32 %90, %91
  %93 = add nsw i32 %92, 128
  %94 = ashr i32 %93, 8
  %95 = add nsw i32 -1, %94
  store i32 %95, i32* %16, align 4
  %96 = load i32*, i32** %6, align 8
  %97 = load i32, i32* %16, align 4
  %98 = sext i32 %97 to i64
  %99 = getelementptr inbounds i32, i32* %96, i64 %98
  %100 = load i32, i32* %99, align 4
  %101 = load i32*, i32** %13, align 8
  %102 = load i32, i32* %17, align 4
  %103 = sext i32 %102 to i64
  %104 = getelementptr inbounds i32, i32* %101, i64 %103
  store i32 %100, i32* %104, align 4
  br label %105

105:                                              ; preds = %89
  %106 = load i32, i32* %17, align 4
  %107 = add nsw i32 %106, 1
  store i32 %107, i32* %17, align 4
  br label %86

108:                                              ; preds = %86
  %109 = load i32*, i32** %13, align 8
  store i32* %109, i32** %14, align 8
  br label %110

110:                                              ; preds = %108, %5
  %111 = load i32, i32* %27, align 4
  %112 = ashr i32 %111, 5
  store i32 %112, i32* %18, align 4
  %113 = load i32, i32* %27, align 4
  %114 = and i32 %113, 31
  store i32 %114, i32* %19, align 4
  %115 = load i32, i32* %26, align 4
  %116 = load i32, i32* %27, align 4
  %117 = add nsw i32 %116, %115
  store i32 %117, i32* %27, align 4
  %118 = load i32, i32* %27, align 4
  %119 = ashr i32 %118, 5
  store i32 %119, i32* %20, align 4
  %120 = load i32, i32* %27, align 4
  %121 = and i32 %120, 31
  store i32 %121, i32* %21, align 4
  %122 = load i32, i32* %26, align 4
  %123 = load i32, i32* %27, align 4
  %124 = add nsw i32 %123, %122
  store i32 %124, i32* %27, align 4
  %125 = load i32, i32* %27, align 4
  %126 = ashr i32 %125, 5
  store i32 %126, i32* %22, align 4
  %127 = load i32, i32* %27, align 4
  %128 = and i32 %127, 31
  store i32 %128, i32* %23, align 4
  %129 = load i32, i32* %26, align 4
  %130 = load i32, i32* %27, align 4
  %131 = add nsw i32 %130, %129
  store i32 %131, i32* %27, align 4
  %132 = load i32, i32* %27, align 4
  %133 = ashr i32 %132, 5
  store i32 %133, i32* %24, align 4
  %134 = load i32, i32* %27, align 4
  %135 = and i32 %134, 31
  store i32 %135, i32* %25, align 4
  %136 = load i32*, i32** %14, align 8
  %137 = load i32, i32* %18, align 4
  %138 = sext i32 %137 to i64
  %139 = getelementptr inbounds i32, i32* %136, i64 %138
  %140 = getelementptr inbounds i32, i32* %139, i64 1
  %141 = call i32 @LD_UB(i32* %140)
  %142 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %53, i32 0, i32 0
  store i32 %141, i32* %142, align 4
  %143 = bitcast %struct.TYPE_15__* %32 to i8*
  %144 = bitcast %struct.TYPE_15__* %53 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %143, i8* align 4 %144, i64 4, i1 false)
  %145 = load i32*, i32** %14, align 8
  %146 = load i32, i32* %20, align 4
  %147 = sext i32 %146 to i64
  %148 = getelementptr inbounds i32, i32* %145, i64 %147
  %149 = getelementptr inbounds i32, i32* %148, i64 1
  %150 = call i32 @LD_UB(i32* %149)
  %151 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %54, i32 0, i32 0
  store i32 %150, i32* %151, align 4
  %152 = bitcast %struct.TYPE_15__* %33 to i8*
  %153 = bitcast %struct.TYPE_15__* %54 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %152, i8* align 4 %153, i64 4, i1 false)
  %154 = load i32*, i32** %14, align 8
  %155 = load i32, i32* %22, align 4
  %156 = sext i32 %155 to i64
  %157 = getelementptr inbounds i32, i32* %154, i64 %156
  %158 = getelementptr inbounds i32, i32* %157, i64 1
  %159 = call i32 @LD_UB(i32* %158)
  %160 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %55, i32 0, i32 0
  store i32 %159, i32* %160, align 4
  %161 = bitcast %struct.TYPE_15__* %34 to i8*
  %162 = bitcast %struct.TYPE_15__* %55 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %161, i8* align 4 %162, i64 4, i1 false)
  %163 = load i32*, i32** %14, align 8
  %164 = load i32, i32* %24, align 4
  %165 = sext i32 %164 to i64
  %166 = getelementptr inbounds i32, i32* %163, i64 %165
  %167 = getelementptr inbounds i32, i32* %166, i64 1
  %168 = call i32 @LD_UB(i32* %167)
  %169 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %56, i32 0, i32 0
  store i32 %168, i32* %169, align 4
  %170 = bitcast %struct.TYPE_15__* %35 to i8*
  %171 = bitcast %struct.TYPE_15__* %56 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %170, i8* align 4 %171, i64 4, i1 false)
  %172 = load i32, i32* %19, align 4
  %173 = call i32 @__msa_fill_h(i32 %172)
  store i32 %173, i32* %45, align 4
  %174 = load i32, i32* %19, align 4
  %175 = sub nsw i32 32, %174
  %176 = call i32 @__msa_fill_h(i32 %175)
  store i32 %176, i32* %46, align 4
  %177 = load i32, i32* %21, align 4
  %178 = call i32 @__msa_fill_h(i32 %177)
  store i32 %178, i32* %47, align 4
  %179 = load i32, i32* %21, align 4
  %180 = sub nsw i32 32, %179
  %181 = call i32 @__msa_fill_h(i32 %180)
  store i32 %181, i32* %48, align 4
  %182 = load i32, i32* %23, align 4
  %183 = call i32 @__msa_fill_h(i32 %182)
  store i32 %183, i32* %49, align 4
  %184 = load i32, i32* %23, align 4
  %185 = sub nsw i32 32, %184
  %186 = call i32 @__msa_fill_h(i32 %185)
  store i32 %186, i32* %50, align 4
  %187 = load i32, i32* %25, align 4
  %188 = call i32 @__msa_fill_h(i32 %187)
  store i32 %188, i32* %51, align 4
  %189 = load i32, i32* %25, align 4
  %190 = sub nsw i32 32, %189
  %191 = call i32 @__msa_fill_h(i32 %190)
  store i32 %191, i32* %52, align 4
  %192 = load i32, i32* %47, align 4
  %193 = load i32, i32* %45, align 4
  %194 = load i32, i32* %51, align 4
  %195 = load i32, i32* %49, align 4
  %196 = load i32, i32* %45, align 4
  %197 = load i32, i32* %47, align 4
  %198 = call i32 @ILVR_D2_SH(i32 %192, i32 %193, i32 %194, i32 %195, i32 %196, i32 %197)
  %199 = load i32, i32* %48, align 4
  %200 = load i32, i32* %46, align 4
  %201 = load i32, i32* %52, align 4
  %202 = load i32, i32* %50, align 4
  %203 = load i32, i32* %46, align 4
  %204 = load i32, i32* %48, align 4
  %205 = call i32 @ILVR_D2_SH(i32 %199, i32 %200, i32 %201, i32 %202, i32 %203, i32 %204)
  %206 = load i32, i32* %37, align 4
  %207 = load i32, i32* %39, align 4
  %208 = load i32, i32* %41, align 4
  %209 = load i32, i32* %43, align 4
  %210 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %36, i32 0, i32 0
  %211 = load i32, i32* %210, align 4
  %212 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %32, i32 0, i32 0
  %213 = load i32, i32* %212, align 4
  %214 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %36, i32 0, i32 0
  %215 = load i32, i32* %214, align 4
  %216 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %33, i32 0, i32 0
  %217 = load i32, i32* %216, align 4
  %218 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %36, i32 0, i32 0
  %219 = load i32, i32* %218, align 4
  %220 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %34, i32 0, i32 0
  %221 = load i32, i32* %220, align 4
  %222 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %36, i32 0, i32 0
  %223 = load i32, i32* %222, align 4
  %224 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %35, i32 0, i32 0
  %225 = load i32, i32* %224, align 4
  %226 = call i32 @ILVR_B4_SH(i32 %211, i32 %213, i32 %215, i32 %217, i32 %219, i32 %221, i32 %223, i32 %225, i32 %206, i32 %207, i32 %208, i32 %209)
  %227 = load i32, i32* %37, align 4
  %228 = load i32, i32* %39, align 4
  %229 = load i32, i32* %41, align 4
  %230 = load i32, i32* %43, align 4
  %231 = load i32, i32* %38, align 4
  %232 = load i32, i32* %40, align 4
  %233 = load i32, i32* %42, align 4
  %234 = load i32, i32* %44, align 4
  %235 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %36, i32 0, i32 0
  %236 = load i32, i32* %235, align 4
  %237 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %36, i32 0, i32 0
  %238 = load i32, i32* %237, align 4
  %239 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %36, i32 0, i32 0
  %240 = load i32, i32* %239, align 4
  %241 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %36, i32 0, i32 0
  %242 = load i32, i32* %241, align 4
  %243 = call i32 @SLDI_B4_SH(i32 %236, i32 %227, i32 %238, i32 %228, i32 %240, i32 %229, i32 %242, i32 %230, i32 2, i32 %231, i32 %232, i32 %233, i32 %234)
  %244 = load i32, i32* %39, align 4
  %245 = load i32, i32* %37, align 4
  %246 = load i32, i32* %43, align 4
  %247 = load i32, i32* %41, align 4
  %248 = load i32, i32* %37, align 4
  %249 = load i32, i32* %39, align 4
  %250 = call i32 @ILVR_D2_SH(i32 %244, i32 %245, i32 %246, i32 %247, i32 %248, i32 %249)
  %251 = load i32, i32* %40, align 4
  %252 = load i32, i32* %38, align 4
  %253 = load i32, i32* %44, align 4
  %254 = load i32, i32* %42, align 4
  %255 = load i32, i32* %38, align 4
  %256 = load i32, i32* %40, align 4
  %257 = call i32 @ILVR_D2_SH(i32 %251, i32 %252, i32 %253, i32 %254, i32 %255, i32 %256)
  %258 = load i32, i32* %38, align 4
  %259 = load i32, i32* %45, align 4
  %260 = load i32, i32* %40, align 4
  %261 = load i32, i32* %47, align 4
  %262 = load i32, i32* %38, align 4
  %263 = load i32, i32* %40, align 4
  %264 = call i32 @MUL2(i32 %258, i32 %259, i32 %260, i32 %261, i32 %262, i32 %263)
  %265 = load i32, i32* %37, align 4
  %266 = load i32, i32* %46, align 4
  %267 = mul nsw i32 %265, %266
  %268 = load i32, i32* %38, align 4
  %269 = add nsw i32 %268, %267
  store i32 %269, i32* %38, align 4
  %270 = load i32, i32* %39, align 4
  %271 = load i32, i32* %48, align 4
  %272 = mul nsw i32 %270, %271
  %273 = load i32, i32* %40, align 4
  %274 = add nsw i32 %273, %272
  store i32 %274, i32* %40, align 4
  %275 = load i32, i32* %38, align 4
  %276 = load i32, i32* %40, align 4
  %277 = call i32 @SRARI_H2_SH(i32 %275, i32 %276, i32 5)
  %278 = load i32, i32* %38, align 4
  %279 = load i32, i32* %38, align 4
  %280 = load i32, i32* %40, align 4
  %281 = load i32, i32* %40, align 4
  %282 = load i64, i64* %30, align 8
  %283 = load i64, i64* %31, align 8
  %284 = call i32 @PCKEV_B2_SB(i32 %278, i32 %279, i32 %280, i32 %281, i64 %282, i64 %283)
  %285 = load i64, i64* %31, align 8
  %286 = load i64, i64* %30, align 8
  %287 = call i64 @__msa_pckev_b(i64 %285, i64 %286)
  %288 = trunc i64 %287 to i32
  store i32 %288, i32* %37, align 4
  %289 = load i64, i64* %31, align 8
  %290 = load i64, i64* %30, align 8
  %291 = call i64 @__msa_pckod_b(i64 %289, i64 %290)
  %292 = trunc i64 %291 to i32
  store i32 %292, i32* %38, align 4
  %293 = load i32, i32* %38, align 4
  %294 = load i32, i32* %37, align 4
  %295 = call i64 @__msa_pckev_w(i32 %293, i32 %294)
  %296 = trunc i64 %295 to i32
  store i32 %296, i32* %39, align 4
  %297 = load i32, i32* %39, align 4
  %298 = sext i32 %297 to i64
  %299 = load i32, i32* %39, align 4
  %300 = sext i32 %299 to i64
  %301 = call i64 @__msa_pckev_b(i64 %298, i64 %300)
  store i64 %301, i64* %30, align 8
  %302 = load i32, i32* %39, align 4
  %303 = sext i32 %302 to i64
  %304 = load i32, i32* %39, align 4
  %305 = sext i32 %304 to i64
  %306 = call i64 @__msa_pckod_b(i64 %303, i64 %305)
  store i64 %306, i64* %31, align 8
  %307 = load i64, i64* %30, align 8
  %308 = load i32*, i32** %8, align 8
  %309 = load i32, i32* %9, align 4
  %310 = call i32 @ST_W2(i64 %307, i32 0, i32 1, i32* %308, i32 %309)
  %311 = load i64, i64* %31, align 8
  %312 = load i32*, i32** %8, align 8
  %313 = load i32, i32* %9, align 4
  %314 = mul nsw i32 2, %313
  %315 = sext i32 %314 to i64
  %316 = getelementptr inbounds i32, i32* %312, i64 %315
  %317 = load i32, i32* %9, align 4
  %318 = call i32 @ST_W2(i64 %311, i32 0, i32 1, i32* %316, i32 %317)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @LD(i32*) #2

declare dso_local i32 @SD(i32, i32*) #2

declare dso_local i32 @LD_UB(i32*) #2

declare dso_local i32 @__msa_fill_h(i32) #2

declare dso_local i32 @ILVR_D2_SH(i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @ILVR_B4_SH(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @SLDI_B4_SH(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @MUL2(i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @SRARI_H2_SH(i32, i32, i32) #2

declare dso_local i32 @PCKEV_B2_SB(i32, i32, i32, i32, i64, i64) #2

declare dso_local i64 @__msa_pckev_b(i64, i64) #2

declare dso_local i64 @__msa_pckod_b(i64, i64) #2

declare dso_local i64 @__msa_pckev_w(i32, i32) #2

declare dso_local i32 @ST_W2(i64, i32, i32, i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
